automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,21 +579,21 @@
     "    if isinstance(y_range, list):\n",
     "        y = y_range\n",
     "    \n",
-    "    return dict(x=x, y=y)"
+    "    return dict(x=x,)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': None, 'y': None}"
+       "{}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
