automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -574,7 +574,7 @@
     "    x = None\n",
     "    y = None\n",
     "    \n",
-    "    if is_instan"
+    "    if is_instance(x_range, list) && "
    ]
   },
   {
