automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -574,7 +574,7 @@
     "    x = None\n",
     "    y = None\n",
     "    \n",
-    "    if is_instance(x_range, list) && "
+    "    if isinstance(x_range, list) && isinstance"
    ]
   },
   {
