automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -576,7 +576,7 @@
     "    \n",
     "    if isinstance(x_range, list) && isinstance(y_range, list):\n",
     "        return dict(x_range, y_range)\n",
-    "    elif: "
+    "    elif is: "
    ]
   },
   {
