automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -577,7 +577,8 @@
     "    if isinstance(x_range, list) && isinstance(y_range, list):\n",
     "        return dict(x_range, y_range)\n",
     "    elif isinstance(x_range,list):\n",
-    "        return dict()"
+    "        return dict(x_range)\n",
+    "    eli"
    ]
   },
   {
