--- a/index.ipynb
+++ b/index.ipynb
@@ -575,9 +575,9 @@
     "    y = None\n",
     "    \n",
     "    if isinstance(x_range, list) && isinstance(y_range, list):\n",
-    "        return dict(x_range, y_range)\n",
+    "        return dict(x=x_range, y=y_range)\n",
     "    elif isinstance(x_range,list):\n",
-    "        return dict(x_range)\n",
+    "        return dict(x=x_range)\n",
     "    eli"
    ]
   },
