automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -578,7 +578,8 @@
     "        return dict(x=x_range, y=y_range)\n",
     "    elif isinstance(x_range,list):\n",
     "        return dict(x=x_range)\n",
-    "    eli"
+    "    elif isinstance(y_range,list):\n",
+    "        ret"
    ]
   },
   {
