automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -579,7 +579,7 @@
     "    elif isinstance(x_range,list):\n",
     "        return dict(x=x_range)\n",
     "    elif isinstance(y_range,list):\n",
-    "        ret"
+    "        return dict()"
    ]
   },
   {
