--- a/index.ipynb
+++ b/index.ipynb
@@ -577,9 +577,7 @@
     "    if isinstance(x_range, list) && isinstance(y_range, list):\n",
     "        return dict(x=x_range, y=y_range)\n",
     "    elif isinstance(x_range,list):\n",
-    "        return dict(x=x_range)\n",
-    "    elif isinstance(y_range,list):\n",
-    "        return dict()"
+    "        return dict(x=x_range)\n"
    ]
   },
   {
