automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -566,9 +566,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-16-24bc2968d62f>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-24bc2968d62f>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    if isinstance(x_range, list) && isinstance(y_range, list):\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    x = None\n",
@@ -577,7 +586,9 @@
     "    if isinstance(x_range, list) && isinstance(y_range, list):\n",
     "        return dict(x=x_range, y=y_range)\n",
     "    elif isinstance(x_range,list):\n",
-    "        return dict(x=x_range)\n"
+    "        return dict(x=x_range)\n",
+    "    else:\n",
+    "        return {}"
    ]
   },
   {
