automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -577,14 +577,14 @@
     "    if isinstance(x_range, list) and isinstance(y_range, list):\n",
     "        return dict(xaxis=x_range, yaxis=y_range)\n",
     "    elif isinstance(x_range,list):\n",
-    "        return dict(x=x_range)\n",
+    "        return dict(xaxis=x_range)\n",
     "    else:\n",
     "        return {}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
        "{}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,16 +626,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'x': [1, 4]}"
+       "{'xaxis': [1, 4]}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
