--- a/index.ipynb
+++ b/index.ipynb
@@ -566,9 +566,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-23-0c7286601f80>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-23-0c7286601f80>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    else:\u001b[0m\n\u001b[0m       ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    x = None\n",
@@ -577,7 +586,7 @@
     "    if isinstance(x_range, list) and isinstance(y_range, list):\n",
     "        return dict(xaxis=range(x_range), yaxis=y_range)\n",
     "    elif isinstance(x_range,list):\n",
-    "        return dict(xaxis=x_range)\n",
+    "        return dict(xaxis=range(x_range)\n",
     "    else:\n",
     "        return {}"
    ]
