automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -575,7 +575,7 @@
     "    y = None\n",
     "    \n",
     "    if isinstance(x_range, list) and isinstance(y_range, list):\n",
-    "        return dict(xaxis=dict(x_range), yaxis=y_range)\n",
+    "        return dict(xaxis=dict(range=x_range), yaxis=dicy_range)\n",
     "    elif isinstance(x_range,list):\n",
     "        return dict(xaxis=range(x_range))\n",
     "    else:\n",
