--- a/index.ipynb
+++ b/index.ipynb
@@ -571,8 +571,7 @@
    "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
-    "    x = None\n",
-    "    y = None\n",
+    "    the_la\n",
     "    \n",
     "    if isinstance(x_range, list) and isinstance(y_range, list):\n",
     "        return dict(xaxis=dict(range=x_range), yaxis=dict(range=y_range))\n",
