automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -572,13 +572,7 @@
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    the_layout = dict()\n",
-    "    \n",
-    "    if isinstance(x_range, list) and isinstance(y_range, list):\n",
-    "        \n",
-    "    elif isinstance(x_range,list):\n",
-    "        return dict(xaxis=dict(range=x_range))\n",
-    "    else:\n",
-    "        return {}"
+    "    return the_layou"
    ]
   },
   {
