automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -566,18 +566,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    the_layout = dict()\n",
-    "    return the_layou"
+    "    return the_layout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -586,17 +586,14 @@
        "{}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "layout()\n",
-    "# {}\n",
-    "\n",
-    "\n",
-    "a=dict(a)"
+    "# {}"
    ]
   },
   {
