automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -572,6 +572,8 @@
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    the_layout = dict()\n",
+    "    \n",
+    "    if isin\n",
     "    return the_layout"
    ]
   },
