automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -574,7 +574,7 @@
     "    the_layout = dict()\n",
     "    \n",
     "    if isinstance(x_range, list):\n",
-    "        the_layout['xaxis'].update(x_range)\n",
+    "        the_layout.update('axis') = x\n",
     "    return the_layout"
    ]
   },
