automatically backed up by learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -574,7 +574,7 @@
     "    the_layout = dict()\n",
     "    \n",
     "    if isinstance(x_range, list):\n",
-    "        the_layout['axis']\n",
+    "        the_layout\n",
     "    return the_layout"
    ]
   },
