automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -574,7 +574,7 @@
     "    the_layout = dict()\n",
     "    \n",
     "    if isinstance(x_range, list):\n",
-    "        the_layout.update()\n",
+    "        the_layout.update(axis=dict(ra))\n",
     "        the_layout['xaxis'].update(dict(range = x_range))\n",
     "    return the_layout"
    ]
