--- a/index.ipynb
+++ b/index.ipynb
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -574,14 +574,15 @@
     "    the_layout = dict()\n",
     "    \n",
     "    if isinstance(x_range, list):\n",
-    "        the_layout.update(axis=dict(range=x_range))\n",
-    "    if \n",
+    "        the_layout.update(xaxis=dict(range=x_range))\n",
+    "    if isinstance(y_range, list):\n",
+    "        the_layout.update(yaxis=dict(range=y_range))\n",
     "    return the_layout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +591,7 @@
        "{}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,16 +624,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'axis': {'range': [1, 4]}}"
+       "{'xaxis': {'range': [1, 4]}}"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,9 +658,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 70,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "layout() # {}"
    ]
@@ -673,11 +685,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'xaxis': {'range': [1, 3]}, 'yaxis': {'range': [4, 5]}}"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "layout([1, 3], [4, 5])\n",
     "# {'xaxis': {'range': [1, 3]}, 'yaxis': {'range': [4, 5]}}"
