--- a/index.ipynb
+++ b/index.ipynb
@@ -722,13 +722,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 72,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{}"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "layout(options = {'title': 'foo'})"
+    "layout(options = {'title': 'foo'})\n",
+    "isinstance(la)"
    ]
   },
   {
