automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -722,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 73,
    "metadata": {
     "scrolled": false
    },
@@ -730,17 +730,17 @@
     {
      "data": {
       "text/plain": [
-       "{}"
+       "True"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "layout(options = {'title': 'foo'})\n",
-    "isinstance(la)"
+    "options = {'title': 'foo'}"
    ]
   },
   {
