automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -566,14 +566,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
     "def layout(x_range = None, y_range = None, options = {}):\n",
     "    the_layout = dict()\n",
     "    \n",
-    "    if opt\n",
+    "    if options != {}:\n",
+    "        the_layout.update(options)\n",
     "    if isinstance(x_range, list):\n",
     "        the_layout.update(xaxis=dict(range=x_range))\n",
     "    if isinstance(y_range, list):\n",
@@ -583,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -592,7 +593,7 @@
        "{}"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +635,7 @@
        "{'xaxis': {'range': [1, 4]}}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -668,7 +669,7 @@
        "{}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -697,7 +698,7 @@
        "{'xaxis': {'range': [1, 3]}, 'yaxis': {'range': [4, 5]}}"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,8 +741,7 @@
     }
    ],
    "source": [
-    "layout(options = {'title': 'foo'})\n",
-    "a= dict()"
+    "layout(options = {'title': 'foo'})"
    ]
   },
   {
