--- a/index.ipynb
+++ b/index.ipynb
@@ -724,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 82,
    "metadata": {
     "scrolled": false
    },
@@ -732,10 +732,10 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "{'title': 'foo'}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -746,9 +746,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'chart', 'xaxis': {'range': [1, 3]}}"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "layout([1, 3], options = {'title': 'chart'})\n",
     "\n",
@@ -764,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
